--- a/index.html
+++ b/index.html
@@ -415,23 +415,23 @@
                         Creating exceptional digital experiences that drive results and inspire innovation.
                     </p>
                     <div class="social-links">
-                        <a href="#" class="social-link" aria-label="Facebook">
+                        <a href="javascript:void(0)" class="social-link coming-soon" aria-label="Facebook (Coming Soon)" title="Coming Soon" onclick="showComingSoon(event)">
                             <svg viewBox="0 0 24 24" fill="currentColor">
                                 <path d="M18 2h-3a5 5 0 0 0-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 0 1 1-1h3z"/>
                             </svg>
                         </a>
-                        <a href="#" class="social-link" aria-label="Twitter">
+                        <a href="javascript:void(0)" class="social-link coming-soon" aria-label="Twitter (Coming Soon)" title="Coming Soon" onclick="showComingSoon(event)">
                             <svg viewBox="0 0 24 24" fill="currentColor">
                                 <path d="M23 3a10.9 10.9 0 0 1-3.14 1.53 4.48 4.48 0 0 0-7.86 3v1A10.66 10.66 0 0 1 3 4s-4 9 5 13a11.64 11.64 0 0 1-7 2c9 5 20 0 20-11.5a4.5 4.5 0 0 0-.08-.83A7.72 7.72 0 0 0 23 3z"/>
                             </svg>
                         </a>
-                        <a href="#" class="social-link" aria-label="LinkedIn">
+                        <a href="javascript:void(0)" class="social-link coming-soon" aria-label="LinkedIn (Coming Soon)" title="Coming Soon" onclick="showComingSoon(event)">
                             <svg viewBox="0 0 24 24" fill="currentColor">
                                 <path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6zM2 9h4v12H2z"/>
                                 <circle cx="4" cy="4" r="2"/>
                             </svg>
                         </a>
-                        <a href="#" class="social-link" aria-label="Instagram">
+                        <a href="javascript:void(0)" class="social-link coming-soon" aria-label="Instagram (Coming Soon)" title="Coming Soon" onclick="showComingSoon(event)">
                             <svg viewBox="0 0 24 24" fill="currentColor">
                                 <rect x="2" y="2" width="20" height="20" rx="5" ry="5"/>
                                 <path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"/>
