--- a/index.html
+++ b/index.html
@@ -473,6 +473,5 @@
         </div>
     </footer>
 
-    <script src="js/main.js"></script>
-</body>
+    <script type="module" src="js/main.js"></script></body>
 </html>
